[project]
name = "EAU_ematth"
version = "0.0.1"
authors = [
  { name="Evan M. Matthews", email="evanmm3@illinois.edu" },
]
description = "A fast, generalized audio package."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com"
Issues = "https://github.com"
